# ar_601

./: README.md
ar601_connection/: CMakeLists.txt  package.xml
ar601_connection/config/: config.ini
ar601_connection/src/: ar601_connection_node.cpp  ar601_connection_node.h  ar_packet.cpp  ar_packet.h
ar601_control/: CMakeLists.txt  package.xml
ar601_control/config/: ar601_control.yaml
ar601_control/launch/: ar601.launch  ar601_rqt.launch
ar601_description/: package.xml
ar601_description/meshes/: Head1.STL  Head2.STL  LAnkle.STL  LArm.STL  LElbow.STL  LFoot.STL  LHip.STL  LPelvis.STL  LShoulder1.STL  LShoulder2.STL  LShoulder3.STL  LThigh.STL  LTibia.STL  LWrist1.STL  LWrist2.STL  Neck1.STL  Neck2.STL  RAnkle.STL  RArm.STL  RElbow.STL  RFoot.STL  RHip.STL  RPelvis.STL  RShoulder1.STL  RShoulder2.STL  RShoulder3.STL  RThigh.STL  RTibia.STL  RWrist1.STL  RWrist2.STL  Taz.STL  Torso.STL
ar601_description/urdf/: ar601.urdf.xacro  ar601_control.xacro  ar601_gazebo.xacro  ar601_sensors.xacro
ar601_gazebo/: CMakeLists.txt  package.xml
ar601_gazebo/launch/: display.launch  gazebo.launch
ar601_gazebo/nodes/: calculate_zmp.py
ar601_gazebo/worlds/: ar601.world
ar601_kinematics/: CMakeLists.txt  package.xml
ar601_kinematics/include/: T46.h  ik_left.h  ik_left_12.h  ik_left_12_initialize.h  ik_left_12_rtwutil.h  ik_left_12_terminate.h  ik_left_12_types.h  ik_left_initialize.h  ik_left_rtwutil.h  ik_left_terminate.h  ik_left_types.h  ik_right.h  ik_right_12.h  ik_right_12_initialize.h  ik_right_12_terminate.h  ik_right_12_types.h  inv.h  left_in_right.h  left_in_right_initialize.h  left_in_right_mex_initialize.h  left_in_right_mex_terminate.h  left_in_right_mex_types.h  left_in_right_terminate.h  left_in_right_types.h  mpower.h  q4.h  q5_1.h  q5_2.h  q5_3.h  q5_4.h  rdivide.h  right_in_left.h  rtGetInf.h  rtGetNaN.h  rt_defines.h  rt_nonfinite.h  rtwtypes.h
ar601_kinematics/src/: T46.c  fservice.cpp  ik_left.c  ik_left_12.c  ik_left_12_initialize.c  ik_left_12_rtwutil.c  ik_left_12_terminate.c  ik_left_initialize.c  ik_left_rtwutil.c  ik_left_terminate.c  ik_right.c  ik_right_12.c  ik_right_12_initialize.c  ik_right_12_terminate.c  inv.c  iservice.cpp  left_in_right.c  left_in_right_mex_initialize.c  left_in_right_mex_terminate.c  mpower.c  q4.c  q5_1.c  q5_2.c  q5_3.c  q5_4.c  rdivide.c  right_in_left.c  rtGetInf.c  rtGetNaN.c  rt_nonfinite.c
ar601_launch/: CMakeLists.txt  package.xml
ar601_launch/launch/: start.launch
ar601_messages/: CMakeLists.txt  package.xml
ar601_messages/msg/: JointStatus.msg  Power.msg
ar601_messages/srv/: FK.srv
ar601_preview_control/: CMakeLists.txt  package.xml
ar601_preview_control/config/: g_coef.txt
ar601_preview_control/include/: preview_control_node.h
ar601_preview_control/launch/: force.launch
ar601_preview_control/src/: cog_move.cpp  force_node.cpp  main.cpp  preview_control_node.cpp  trace.py
ar601_preview_control/test/: basic_trajectory.cpp  basic_trajectory.h  utest.cpp
ar601_preview_control/test/data/: test_u.data  test_x.data
ar601_python_control/: CMakeLists.txt  angles.npy  break.py  break_arms.py  compensator.py  compensator2.py  converter.py  initial_height.py  initial_position.py  listener.py  package.xml  privet_right  relax.py  relax_arms.py  set_p.py  set_to_zero  set_to_zero_arm  shake_right  trace_arms.py  walking_test.py  write_to_file.py  zmp.py
ar601_python_control/trajectory/: angles.npy  angles2.npy  angles3.npy  angles_-1cm.npy  angles_1.npy  angles_ok1.npy  angles_prised vbok.npy
ar601_trajectories/: CMakeLists.txt  package.xml
ar601_trajectories/generation_octave/: backward.m  f_teta.m  f_teta_torso.m  f_x.m  f_z.m  f_zmp_x.m  foot_position.m  forward.m  hermit.m  left.m  main.m  next_point.m  octave-workspace  planner.m  right.m  stepping.m  stepping_2.m  still.m
ar601_trajectories/include/: f_x.h  f_z.h  f_zmp_x.h  main_data.h  main_emxAPI.h  main_emxutil.h  main_trajectory.h  main_types.h  rtGetInf.h  rtGetNaN.h  rt_defines.h
ar601_trajectories/src/: f_x.c  f_z.c  f_zmp_x.c  main_data.c  main_emxAPI.c  main_emxutil.c  main_trajectory.c  rtGetInf.c  rtGetNaN.c  service.cpp
ar601_trajectories/srv/: GetTrajectory.srv
ar601_trajectories/trajectories/: 0.traj  step_back.traj  step_forward.traj  step_left.traj  step_right.traj  stepping.traj  still.traj
