<?xml version="1.0"?>
<package>
  <name>ar601_control</name>
  <version>0.0.1</version>
  <description>The ar601 ros control package</description>

  <maintainer email="asagitov@todo.todo">asagitov</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>ros_control</build_depend>
  <build_depend>ros_controllers</build_depend>
  <run_depend>ros_control</run_depend>
  <run_depend>ros_controllers</run_depend>
  <export>
  </export>
</package>
