<?xml version="1.0"?>
<package>
  <name>ar601_description</name>
  <version>0.0.1</version>
  <description>The ar601 description package</description>
  
  <maintainer email="asagitov@todo.todo">Artur</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>urdf</build_depend>

  <run_depend>urdf</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>pr2_description</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>xacro</run_depend>

</package>



