<?xml version="1.0"?>
<package>
  <name>ar601_kinematics</name>
  <version>0.0.1</version>
  <description>The ar601_kinematics package</description>
  <maintainer email="asagitov@todo.todo">asagitov</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>ar601_messages</build_depend>
  <run_depend>ar601_messages</run_depend>
  <run_depend>message_runtime</run_depend>
  <export>
  </export>
</package>
